Registration Page Added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <html>
    <head>
       <title>React Sample App</title>
+	   <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <style>
          /* http://meyerweb.com/eric/tools/css/reset/ 
          v2.0 | 20110126
@@ -458,7 +459,8 @@
                class="fa fa-twitter-square"></span>
                </a>
             </li>
-            <li><a href="https://www.github.com/Souvik93"> <span
+            <li>
+				<a href="https://www.github.com/Souvik93"> <span
                class="fa fa-github-square"></span>
                </a>
             </li>
