--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    ;
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -40,7 +40,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Sign up</a></li>
+            <li><a href="registraionPage">Sign up</a></li>
 			<li><a href="#">About Me</a></li>
           </ul>
         </div><!--/.nav-collapse -->
